--- a/front/src/pages/Moon/MoonPage.css
+++ b/front/src/pages/Moon/MoonPage.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     padding: 1.5rem; 
     min-height: 550px;
-    max-height: 700px; /* Optional: Add a max-height to constrain it on very large screens */
+    max-height: 700px; 
 
     background-color: #1e293b;
     border-radius: 1rem;
